# event-backtester

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: futures.md  portfolio.md
examples/: run_demo.py
src/eventbt/: __init__.py  data.py  engine.py  futures.py  metrics.py  portfolio.py  strategy.py  walkforward.py
tests/: _helpers.py  conftest.py  test_data.py  test_fills.py  test_futures.py  test_metrics.py  test_oco.py  test_portfolio.py  test_public_api.py  test_sizing.py  test_walkforward.py
